# embpred

./: .gitignore  LICENSE  Makefile  README.md  draw_figure.py  draw_figure_2.py  environment.yml  export.py  log_reg_results.txt  nohup.out  output.json  output2.json  pyproject.toml  restructure.py  test_data.py  train_val_test_embryos.txt  utils.py
all-class-model/: export.py  inf.py
docs/: mkdocs.yml
docs/docs/: index.md
embpred/: __init__.py  class_dist.py  config.py  dataset.py  features.py  nohup.out  plots.py  show_model.py
embpred/data/: balance.py  dataset.py  get_embeddings.py  get_sample.py  get_test_focal_depths.py  get_test_images.py  make_dataset.py  my_transforms.py  process_new_data.py  remove_tEmpty.py  restructure.py
embpred/modeling/: export_model.py  inf.py  loss.py  models.py  multi_log_reg.py  predict.py  train.py  train_FirstNet2D.py  train_utils.py  unsup.py  utils.py
models/Kalyani-ResNet50baseline/: test_confusion_matrix.csv  test_results.csv
models/ResNet50-CE-embSplits-1layer128/: test_confusion_matrix.csv  test_results.csv
models/ResNet50-CE-embSplits-1layer64/: test_confusion_matrix.csv  test_results.csv
models/ResNet50-CE-embSplits-balanced-1layer64/: test_confusion_matrix.csv  test_results.csv
models/ResNet50-CE-embSplits-fullbalanced-1layer128/: test_confusion_matrix.csv
notebooks/: 01-Mohsen-SupFuncts.ipynb  02-ExploreDS1.ipynb  03-timeLoading.ipynb  04-testModel.ipynb  05-testSplitByEmbryos.ipynb  06-EDA.ipynb  07-exploreEmbeds.ipynb  Faster-RCNN-Model.ipynb
reports/: time_vs_labels.csv  time_vs_labels.json
(+178 files in other folders)
